fix(mobile-nav): active color on iOS

--- a/src/styles/all.sass
+++ b/src/styles/all.sass
@@ -65,16 +65,22 @@ html body
   font-display: auto
   line-height: 1.4
   font-weight: 500
+  height: 100%
+  overflow-y: scroll
+  -webkit-overflow-scrolling: touch
 
 @media (hover: hover)
   a.navbar-item:hover,
   a.mobile-link-default:hover,
-  a.mobile-link-active:hover
+  a.mobile-link-active:hover,
+  a.nav-link:hover,
     color: $tcasey-blue !important
-a:focus
+a:focus,
   color: $tcasey-blue
 
-.mobile-link-active
+.mobile-link-active,
+.mobile-link-active:active,
+.mobile-link-active:hover,
   text-align: center
   display: flex
   flex-direction: column
@@ -85,10 +91,12 @@ a:focus
   height: 100%
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s
   background-color: rgb(255, 255, 255)
-  color: #075dff
+  color:  $tcasey-blue
+  -webkit-tap-highlight-color: $tcasey-blue
   font-weight: 600
   svg
-    fill: #075dff
+    fill:  $tcasey-blue
+    // stroke: $tcasey-blue
 
 .mobile-link-default
   text-align: center
@@ -101,10 +109,11 @@ a:focus
   height: 100%
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s
   background-color: rgb(255, 255, 255)
-  color: #075dff
+  color:  $tcasey-blue
+  -webkit-tap-highlight-color: $tcasey-blue
   font-weight: 500
   svg
-    fill: #075dff
+    fill:  $tcasey-blue
 
 .nav-link-default
   width: 80px
@@ -166,7 +175,7 @@ body::-webkit-scrollbar-thumb
   padding: 24px 32px
   font-size: 20px
   width: 300px
-  background-image: linear-gradient(253deg, #0780ff, #075dff)
+  background-image: linear-gradient(253deg, #0780ff,  $tcasey-blue)
   border-radius: .5rem
   text-decoration: none
   font-weight: 400
@@ -175,7 +184,7 @@ body::-webkit-scrollbar-thumb
   transition: all .15s ease
 @media (hover: hover)
   .btn-gradient:hover
-    background-image: linear-gradient(253deg, #075dff, #0780ff)
+    background-image: linear-gradient(253deg,  $tcasey-blue, #0780ff)
     color: #fff
 
 #___gatsby
